# zorba-languages-module

./: CMakeLists.txt
src/: CMakeLists.txt
src/com/zorba-xquery/www/modules/: CMakeLists.txt
src/com/zorba-xquery/www/modules/languages/: CMakeLists.txt  xslt.xq
src/com/zorba-xquery/www/modules/languages/xslt.xq.src/: xslt.cpp  xslt.xml
src/xslt.xq.src/: xslt.h
test_xslt/ExpQueryResults/languages/xslt/: xslt1.xml.res
test_xslt/Queries/languages/xslt/: cat.xml  t1.xslt  xslt1.xq
